# vagus

./: .cursorrules  .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_L1_ON_VAGUS_CHAIN.md  CURSOR_MASTER_PLAN_M1_TO_M20.md  CURSOR_MULTICHAIN_TASK.md  CURSOR_START_HERE.md  LICENSE  LINUX_FOUNDATION_READY.md  README.md  SECURITY.md  docker-compose.monitoring.yml  release.sh
.github/workflows/: contracts-ci.yml  python-ci.yml  rust-ci.yml  wasm-ci.yml
L1-adapter/: README.md  TEMPLATE.md
L1-adapter/cosmos/: README.md
L1-adapter/ethereum/: README.md
L1-adapter/vagus-chain/: ANS_STATE_MACHINE_SPECIFICATION.md  INTEGRATION_TEST_SUITE.md  MIGRATION_GUIDE.md  NATIVE_CLIENT_ADAPTERS.md  NATIVE_INTERFACE_SPECIFICATION.md  README.md
contracts/: foundry.toml
contracts/interfaces/: IANSStateManager.sol  IAfferentInbox.sol  ICapabilityIssuer.sol  IReflexArc.sol  IVagalBrake.sol
contracts/script/: DeployCore.s.sol  DevnetConfig.json  deploy_on_vagus_chain.s.sol
contracts/src/core/: ANSStateManager.sol  AfferentInbox.sol  CapabilityIssuer.sol  Events.sol  ExecutorRegistry.sol  GeneratedEvents.sol  GeneratedTypes.sol  Interfaces.sol  PolicyHubIface.sol  ReflexArc.sol  SchemaRegistryIface.sol  Types.sol  VagalBrake.sol
contracts/test/: ANSStateManager.t.sol  CapabilityIssuer.t.sol  ReflexArc.t.sol  VagalBrake.t.sol
demo/scripts/: cross-chain-demo.sh
docs/: Architecture.md  Multichain.md  SRE_RUNBOOK.md  ThreatModel.md  VagusSpec.md
gateway/: Cargo.toml  verify_cbor_vectors.rs
gateway/crates/vagus-chain/: Cargo.toml
gateway/crates/vagus-chain/src/: lib.rs
gateway/crates/vagus-crypto/: Cargo.toml
gateway/crates/vagus-crypto/src/: lib.rs
gateway/crates/vagus-gateway/: Cargo.toml
gateway/crates/vagus-gateway/src/: cbf.rs  collector.rs  event_watcher.rs  lib.rs  main.rs  manager.rs  token_manager.rs
gateway/crates/vagus-telemetry/: Cargo.toml
gateway/crates/vagus-telemetry/src/: lib.rs
infra/devnet/: anvil.sh  docker-compose.yml  up.sh  wasmd.sh
infra/docker/: Dockerfile.contracts  Dockerfile.gateway  Dockerfile.oracle
monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
oracle/: Cargo.toml
oracle/tone-oracle/: Cargo.toml
oracle/tone-oracle/src/: lib.rs  main.rs
oracle/tone-oracle/tests/: integration_test.rs
planner/: generate_cbor_vectors.py  pyproject.toml
planner/tests/: test_validation.py
planner/vagus_planner/: __init__.py  codegen.py  deterministic_cbor.py  eip712.py  intents.py  schemas.py  validate.py
planner/vagus_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
relayer/: Cargo.toml
relayer/src/: main.rs
schemas/common/: units.yaml
schemas/mechanical_arm/: actions.yaml  policy.yaml
scripts/: emergency-drill.sh  spec-drift-check.sh
spec/: errors.yml  events.yml  invariants.yml  types.yml
spec/vectors/: cbor_cases.yml
tests/golden/: Cargo.toml
tests/golden/src/: fuzz.rs  lib.rs  main.rs
wasm-contracts/: Cargo.toml
wasm-contracts/cosmwasm/contracts/afferent_inbox/: Cargo.toml
wasm-contracts/cosmwasm/contracts/afferent_inbox/src/: lib.rs
wasm-contracts/cosmwasm/contracts/ans_state_manager/: Cargo.toml
wasm-contracts/cosmwasm/contracts/ans_state_manager/src/: lib.rs
wasm-contracts/cosmwasm/contracts/capability_issuer/: Cargo.toml
wasm-contracts/cosmwasm/contracts/capability_issuer/src/: lib.rs
wasm-contracts/cosmwasm/contracts/reflex_arc/: Cargo.toml
wasm-contracts/cosmwasm/contracts/reflex_arc/src/: lib.rs
wasm-contracts/cosmwasm/contracts/vagal_brake/: Cargo.toml
wasm-contracts/cosmwasm/contracts/vagal_brake/src/: lib.rs
wasm-contracts/cosmwasm/contracts/vagus_governor/: Cargo.toml
wasm-contracts/cosmwasm/contracts/vagus_governor/src/: lib.rs
wasm-contracts/tests/: integration.rs
