[workspace]
members = [
    "crates/vagus-gateway",
    "crates/vagus-telemetry",
    "crates/vagus-crypto",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
