[workspace]
members = [
    "crates/vagus-gateway",
    "crates/vagus-telemetry",
    "crates/vagus-crypto",
    "crates/vagus-chain",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
