[workspace]
members = [
    "tone-oracle",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber = "0.3"
ethers = { version = "2.0", features = ["abigen", "ws"] }
vagus-chain = { path = "../gateway/crates/vagus-chain", features = ["evm", "cosmos"] }
