[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vagus-planner"
version = "0.1.0"
description = "Vagus planner tools for intent generation and validation"
authors = [{name = "Vagus Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "web3>=6.0.0",
    "pyyaml>=6.0",
    "cbor2>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vagus_planner*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
