[package]
name = "vagus-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"

# Local crates
vagus-chain = { path = "../gateway/crates/vagus-chain", features = ["evm", "cosmos"] }

# Additional dependencies for relayer functionality
futures = "0.3"
tokio-util = "0.7"
parking_lot = "0.12"
