[package]
name = "tone-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
ethers = { workspace = true }
vagus-chain = { workspace = true }

[dev-dependencies]
ethers = { workspace = true, features = ["abigen"] }
hex = "0.4"
