[package]
name = "afferent-inbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
hex = "0.4"

vagus-spec.workspace = true
