[package]
name = "reflex-arc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
rand.workspace = true

vagus-spec.workspace = true
