[package]
name = "vagus-governor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-schema = { version = "1.5" }
cw-storage-plus = "1.2"
cw3 = "1.1"
cw-utils = "1.0"
cw20 = "1.1"
cw3-fixed-multisig = "1.1"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.5", features = ["staking"] }
cw-multi-test = "0.16"
